// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HelpCenterEditModalHeader /> should display the component correctly - with the category selector: with the category selector 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="headerTopContainer"
    >
      <span
        class="titleInput"
      >
        Uncategorized article
      </span>
      <div
        class="headerControls"
      >
        <span
          class="editingState unsaved"
          id="editingState"
        >
          <i
            class="material-icons icon"
          >
            edit
          </i>
          UNSAVED
        </span>
        <div
          class="wrapper"
        >
          <button
            class="trigger"
            data-testid="dropdown-select-trigger"
          >
            <span
              class="label"
            >
              <span>
                <img
                  alt="fr-FR"
                  class="flag-emoji"
                  src="test-file-stub"
                />
                <span>
                  French - France
                </span>
              </span>
            </span>
            <span
              class="material-icons"
            >
              arrow_drop_down
            </span>
          </button>
        </div>
        <button
          aria-label="preview article"
          class="wrapper wrapper ghost medium ghost secondary medium"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            open_in_new
          </i>
        </button>
        <button
          aria-label="copy url"
          class="wrapper wrapper ghost medium ghost secondary medium"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            share
          </i>
        </button>
        <button
          aria-label="close edit modal"
          class="wrapper wrapper ghost medium ghost secondary medium"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            keyboard_tab
          </i>
        </button>
      </div>
    </div>
    <div
      class="break"
    />
    <div
      class="inlineSettings"
    >
      <div
        class="categorySelect"
      >
        <div>
          <div
            class="dropdown"
          >
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class="select noCategory"
              data-toggle="dropdown"
            >
              <div
                class="select dropdown-toggle selectFullWidth"
              >
                <span
                  class="label"
                  style="min-width: 10px; opacity: 1;"
                >
                  - No Category -
                </span>
                <input
                  autocomplete="chrome-off"
                  class="input"
                  style="min-width: 10px;"
                  type="text"
                  value=""
                />
                <i
                  class="material-icons dropdownIcon"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <div
              aria-hidden="true"
              class="options categoryDropdown optionsFullWidth dropdown-menu"
              role="menu"
              tabindex="-1"
            >
              
              <button
                class="option dropdown-item"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                <span>
                  - No category -
                </span>
              </button>
              <button
                class="option dropdown-item"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                <span>
                  Orders
                </span>
              </button>
              <button
                class="option dropdown-item"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                <span>
                  Pricing
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`<HelpCenterEditModalHeader /> should display the component correctly - without the category selector: without the category selector 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="headerTopContainer"
    >
      <span
        class="titleInput"
      >
        Uncategorized article
      </span>
      <div
        class="headerControls"
      >
        <span
          class="editingState unsaved"
          id="editingState"
        >
          <i
            class="material-icons icon"
          >
            edit
          </i>
          UNSAVED
        </span>
        <div
          class="wrapper"
        >
          <button
            class="trigger"
            data-testid="dropdown-select-trigger"
          >
            <span
              class="label"
            >
              <span>
                <img
                  alt="fr-FR"
                  class="flag-emoji"
                  src="test-file-stub"
                />
                <span>
                  French - France
                </span>
              </span>
            </span>
            <span
              class="material-icons"
            >
              arrow_drop_down
            </span>
          </button>
        </div>
        <button
          aria-label="preview article"
          class="wrapper wrapper ghost medium ghost secondary medium"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            open_in_new
          </i>
        </button>
        <button
          aria-label="copy url"
          class="wrapper wrapper ghost medium ghost secondary medium"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            share
          </i>
        </button>
        <button
          aria-label="close edit modal"
          class="wrapper wrapper ghost medium ghost secondary medium"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            keyboard_tab
          </i>
        </button>
      </div>
    </div>
    <div
      class="break"
    />
    <div
      class="inlineSettings"
    />
  </header>
</div>
`;

exports[`<HelpCenterEditModalHeader /> should render a preview article button 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="headerTopContainer"
    >
      <span
        class="titleInput"
      >
        Uncategorized article
      </span>
      <div
        class="headerControls"
      >
        <span
          class="editingState unsaved"
          id="editingState"
        >
          <i
            class="material-icons icon"
          >
            edit
          </i>
          UNSAVED
        </span>
        <div
          class="wrapper"
        >
          <button
            class="trigger"
            data-testid="dropdown-select-trigger"
          >
            <span
              class="label"
            >
              <span>
                <img
                  alt="fr-FR"
                  class="flag-emoji"
                  src="test-file-stub"
                />
                <span>
                  French - France
                </span>
              </span>
            </span>
            <span
              class="material-icons"
            >
              arrow_drop_down
            </span>
          </button>
        </div>
        <button
          aria-label="preview article"
          class="wrapper wrapper ghost medium ghost secondary medium"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            open_in_new
          </i>
        </button>
        <button
          aria-label="copy url"
          class="wrapper wrapper ghost medium ghost secondary medium"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            share
          </i>
        </button>
        <button
          aria-label="close edit modal"
          class="wrapper wrapper ghost medium ghost secondary medium"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            keyboard_tab
          </i>
        </button>
      </div>
    </div>
    <div
      class="break"
    />
    <div
      class="inlineSettings"
    />
  </header>
</div>
`;

exports[`<HelpCenterEditModalHeader /> should render an input when onEditTitle is defined 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="headerTopContainer"
    >
      <div>
        <input
          class="titleInput"
          maxlength="250"
          placeholder="Title"
          type="text"
          value="Uncategorized article"
        />
      </div>
      <div
        class="headerControls"
      >
        <span
          class="editingState unsaved"
          id="editingState"
        >
          <i
            class="material-icons icon"
          >
            edit
          </i>
          UNSAVED
        </span>
        <div
          class="wrapper"
        >
          <button
            class="trigger"
            data-testid="dropdown-select-trigger"
          >
            <span
              class="label"
            >
              <span>
                <img
                  alt="fr-FR"
                  class="flag-emoji"
                  src="test-file-stub"
                />
                <span>
                  French - France
                </span>
              </span>
            </span>
            <span
              class="material-icons"
            >
              arrow_drop_down
            </span>
          </button>
        </div>
        <button
          aria-label="preview article"
          class="wrapper wrapper ghost medium ghost secondary medium"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            open_in_new
          </i>
        </button>
        <button
          aria-label="copy url"
          class="wrapper wrapper ghost medium ghost secondary medium"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            share
          </i>
        </button>
        <button
          aria-label="close edit modal"
          class="wrapper wrapper ghost medium ghost secondary medium"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            keyboard_tab
          </i>
        </button>
      </div>
    </div>
    <div
      class="break"
    />
    <div
      class="inlineSettings"
    />
  </header>
</div>
`;
